--- a/custom-files/system.env
+++ b/custom-files/system.env
@@ -1,9 +1,9 @@
 DR_CLOUD=aws
 DR_AWS_APP_REGION=us-east-1
 DR_UPLOAD_S3_PROFILE=default
-DR_UPLOAD_S3_BUCKET=$DEEPRACER_S3_URI
+DR_UPLOAD_S3_BUCKET=tranqui120-jose-base-bucket-fjpjjh1119es
 DR_UPLOAD_S3_ROLE=to-be-defined
-DR_LOCAL_S3_BUCKET=$DEEPRACER_S3_URI
+DR_LOCAL_S3_BUCKET=tranqui120-jose-base-bucket-fjpjjh1119es
 DR_LOCAL_S3_PROFILE=default
 DR_GUI_ENABLE=False
 DR_KINESIS_STREAM_NAME=None
